# Meld

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  research.md
.cargo/: audit.toml
.github/: release-template.md
.github/workflows/: ci.yml  docs-site.yml  perf.yml  release.yml
contracts/: links.toml
crates/alloy-core/: Cargo.toml
crates/alloy-core/src/: auth.rs  lib.rs
crates/alloy-macros/: Cargo.toml
crates/alloy-macros/src/: lib.rs
crates/alloy-rpc/: Cargo.toml  build.rs
crates/alloy-rpc/proto/: service.proto
crates/alloy-rpc/src/: lib.rs
crates/alloy-rpc/tests/: contract_codegen.rs  descriptor_docgen.rs
crates/alloy-rpc/tests/fixtures/: common.proto
crates/alloy-server/: Cargo.toml
crates/alloy-server/src/: api.rs  auth.rs  builder.rs  grpc.rs  lib.rs  main.rs  middleware.rs
crates/alloy-server/tests/: multiplexing.rs
crates/meld-core/: Cargo.toml  README.md
crates/meld-core/src/: auth.rs  lib.rs
crates/meld-macros/: Cargo.toml  README.md
crates/meld-macros/src/: lib.rs
crates/meld-rpc/: Cargo.toml  README.md  build.rs
crates/meld-rpc/proto/: service.proto
crates/meld-rpc/src/: lib.rs
crates/meld-rpc/tests/: contract_codegen.rs  descriptor_docgen.rs
crates/meld-rpc/tests/fixtures/: complex.proto
crates/meld-server/: Cargo.toml  README.md
crates/meld-server/src/: api.rs  auth.rs  builder.rs  di.rs  grpc.rs  lib.rs  main.rs  middleware.rs
crates/meld-server/tests/: multiplexing.rs  property_api.rs
crates/openportio-core/: Cargo.toml  README.md
crates/openportio-core/src/: auth.rs  lib.rs
crates/openportio-macros/: Cargo.toml  README.md
crates/openportio-macros/src/: lib.rs
crates/openportio-rpc/: Cargo.toml  README.md  build.rs
crates/openportio-rpc/proto/: service.proto
crates/openportio-rpc/src/: lib.rs
crates/openportio-rpc/tests/: contract_codegen.rs  descriptor_docgen.rs
crates/openportio-server/: Cargo.toml  README.md
crates/openportio-server/src/: api.rs  auth.rs  builder.rs  di.rs  grpc.rs  lib.rs  main.rs  middleware.rs
crates/openportio-server/tests/: dto_modes.rs  multiplexing.rs  property_api.rs
docs/: ci-workflow.md  dx-scorecard.md  fastapi-like-builder.md  grpc-contract-docs-strategy.md  multiplexing-fallback.md  observability-and-middleware.md  performance-gates.md  testing-toolchain.md
docs/production/: deployment.md  observability.md  production-api-runbook.md  runbook.md  security.md
docs/release/: docs-site-runbook.md  publish-runbook.md  versioning.md
examples/meld-app/: Cargo.toml
examples/meld-app/src/: main.rs
examples/openportio-app/: Cargo.toml
examples/openportio-app/src/: main.rs
examples/production-api/: .env.example  Cargo.toml  README.md  docker-compose.yml
examples/production-api/migrations/: 0001_create_notes.sql  0002_add_owner_subject.sql
examples/production-api/src/: main.rs
examples/renamed-alloy-app/: Cargo.toml
examples/renamed-alloy-app/src/: main.rs
examples/renamed-meld-app/: Cargo.toml
examples/renamed-meld-app/src/: main.rs
examples/simple-server/: Cargo.toml  README.md
examples/simple-server/src/: main.rs
issues/: 01-workspace-scaffold.md  02-core-domain-state.md  03-rpc-proto-and-codegen.md  04-server-bootstrap-and-health.md  05-single-port-rest-grpc-multiplexing.md  06-shared-middleware-observability.md  07-openapi-swagger-for-rest.md  08-grpc-contract-doc-bridge.md  09-fastapi-like-builder-api.md  10-integration-tests-and-ci.md  README.md  create_github_issues.sh
perf/: rest_smoke.js
scripts/: check_contracts_bundle.sh  check_docs_site_smoke.sh  check_grpc_contract_docs.sh  ci_local.sh  generate_contracts_bundle.py  generate_contracts_bundle.sh  generate_dev_jwt.py  generate_grpc_contract_docs.py  generate_grpc_contract_docs.sh  perf_gate.sh  prod_preflight.sh  release_dry_run.sh  test_quality.sh  validate_multiplexing.sh
website/: .gitignore  README.md  package-lock.json  package.json
website/docs/: getting-started.md  index.md
website/docs/.vitepress/: config.mts
website/docs/.vitepress/theme/: custom.css
website/docs/guides/: dx-builder-dto.md  rest-grpc.md
website/docs/production/: deployment.md
website/docs/reference/: contracts.md
website/scripts/: check-links.mjs  fix-sitemap.mjs  generate-robots.mjs
