[workspace]
members = [
  "crates/alloy-core", "crates/alloy-macros",
  "crates/alloy-rpc",
  "crates/alloy-server", "examples/renamed-alloy-app",
  "examples/simple-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.7", features = ["macros", "http2", "ws"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
jsonwebtoken = "8.3"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tonic = { version = "0.12", features = ["transport"] }
tonic-build = "0.12"
prost = "0.13"
protoc-bin-vendored = "3"
tower = { version = "0.5", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "request-id"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
http = "1"
validator = { version = "0.19", features = ["derive"] }
