[package]
name = "alloy-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy-core = { path = "../alloy-core" }
alloy-rpc = { path = "../alloy-rpc" }
axum.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
serde.workspace = true
serde_json.workspace = true
http.workspace = true
validator.workspace = true

[dev-dependencies]
reqwest.workspace = true
