[package]
name = "meld-macros"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Procedural macros for Meld route and DTO ergonomics."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/meld-macros"
readme = "README.md"
keywords = ["meld", "macros", "proc-macro", "axum", "rust"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }
