[package]
name = "meld-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "gRPC proto bindings and contract generation tooling for Meld."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/meld-rpc"
readme = "README.md"
keywords = ["meld", "grpc", "tonic", "proto", "rust"]
categories = ["web-programming", "network-programming", "asynchronous"]

[[bin]]
name = "grpc-docgen"
path = "src/bin/grpc_docgen.rs"

[dependencies]
meld-core = { path = "../meld-core", version = "0.1.0" }
prost.workspace = true
prost-types = "0.13"
protoc-bin-vendored.workspace = true
serde_json.workspace = true
tempfile = "3"
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
protoc-bin-vendored.workspace = true
