[package]
name = "meld-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
meld-core = { path = "../meld-core" }
meld-macros = { path = "../meld-macros" }
meld-rpc = { path = "../meld-rpc" }
axum.workspace = true
futures-util.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
serde.workspace = true
serde_json.workspace = true
http.workspace = true
validator.workspace = true
pulldown-cmark.workspace = true

[dev-dependencies]
jsonwebtoken.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
