[package]
name = "openportio-app"
edition.workspace = true
license.workspace = true
version.workspace = true
publish = false

[dependencies]
openportio = { package = "openportio-server", path = "../../crates/openportio-server" }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
validator.workspace = true
utoipa.workspace = true

[dev-dependencies]
tower.workspace = true
