[package]
name = "production-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
meld-core = { path = "../../crates/meld-core" }
meld-server = { path = "../../crates/meld-server" }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
validator.workspace = true
utoipa.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "migrate"] }
# Keep CI/local toolchain (Rust 1.86) compatible with sqlx transitive requirements.
home = "=0.5.11"

[dev-dependencies]
tower.workspace = true
