[package]
name = "production-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
openportio-core = { path = "../../crates/openportio-core" }
openportio-server = { path = "../../crates/openportio-server" }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
validator.workspace = true
utoipa.workspace = true
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono"] }
# Keep CI/local toolchain (Rust 1.86) compatible with sqlx transitive requirements.
home = "=0.5.11"

[dev-dependencies]
tower.workspace = true
