[package]
name = "simple-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy-core = { path = "../../crates/alloy-core" }
alloy-server = { path = "../../crates/alloy-server" }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
validator.workspace = true

[dev-dependencies]
tower.workspace = true
