[package]
name = "simple-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
meld-core = { path = "../../crates/meld-core" }
meld-server = { path = "../../crates/meld-server" }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
validator.workspace = true
utoipa.workspace = true

[dev-dependencies]
futures-util.workspace = true
tokio-tungstenite.workspace = true
tower.workspace = true
